--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;500;600;700&display=swap" rel="stylesheet" />
   
   <!-- Favicon -->
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' rx='20' fill='%23D63384'/><text x='50' y='68' font-family='system-ui' font-size='50' font-weight='700' fill='white' text-anchor='middle'>TK</text></svg>" />
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🐳</text></svg>" />
 
   <style>
     :root {
@@ -214,7 +214,7 @@
   <main class="container">
     <!-- Hero -->
     <section class="hero">
-      <h1>Tyler Kneidl</h1>
+      <h1>Tyler Kneidl 🐳</h1>
       <p>I build products. Right now that means a real-time sports analytics app and internal tools that people actually want to use. I care about the engineering, but I care more about whether the thing works for the people using it.</p>
     </section>
 
@@ -274,7 +274,7 @@
       <h2>Get in Touch</h2>
       <div class="contact-links">
         <a href="mailto:tskneidl@gmail.com">tskneidl@gmail.com</a>
-        <a href="https://linkedin.com/in/tylerkneidl" target="_blank" rel="noopener">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/tylerkneidl/" target="_blank" rel="noopener">LinkedIn</a>
         <a href="https://github.com/tylerkneidl" target="_blank" rel="noopener">GitHub</a>
       </div>
       <p class="looking-for">I'm interested in product engineering and engineering leadership roles. If that's what you're hiring for, let's talk.</p>
